--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,11 +23,6 @@ jobs:
   pool:
     vmImage: $(imageName)
   steps:
-  - pwsh: |
-      Remove-Item -Recurse -Force $(Build.SourcesDirectory)/*
-    displayName: Clean sources directory
-    continueOnError: true
-
   - checkout: self
     clean: true
     
@@ -51,7 +46,8 @@ jobs:
       - Agent.OS -equals Windows_NT
   steps:
   - checkout: self
-    clean: publishTestResults
+    clean: true
+
   - task: DotNetCoreCLI@2
     inputs:
       command: 'build'
@@ -92,3 +88,4 @@ jobs:
       ArtifactName: WindowsTestArtifacts
       publishLocation: Container
     displayName: Publish Windows Test Artifacts
+    condition: always()
