--- a/test/SerialLoops.Tests.Shared/SerialLoops.Tests.Shared.csproj
+++ b/test/SerialLoops.Tests.Shared/SerialLoops.Tests.Shared.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\SerialLoops.Lib\SerialLoops.Lib.csproj" />
-    <ProjectReference Include="..\..\SerialLoops.Tests\SerialLoops.Tests.csproj" />
+    <ProjectReference Include="..\..\src\SerialLoops.Lib\SerialLoops.Lib.csproj" />
   </ItemGroup>
 
 </Project>
