--- a/test/ui/SerialLoops.Mac.Tests/SerialLoops.Mac.Tests.csproj
+++ b/test/ui/SerialLoops.Mac.Tests/SerialLoops.Mac.Tests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Appium.WebDriver" Version="5.0.0-rc.4" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
     <PackageReference Include="NUnit" Version="4.0.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
@@ -18,6 +19,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\SerialLoops.Tests.Shared\SerialLoops.Tests.Shared.csproj" />
   </ItemGroup>
 
 </Project>
