--- a/azure-pipelines-merge.yml
+++ b/azure-pipelines-merge.yml
@@ -26,8 +26,9 @@ jobs:
       projects: $(Build.SourcesDirectory)/test/ui/SerialLoops.Mac.Tests/SerialLoops.Mac.Tests.csproj
     displayName: Build SerialLoops.Mac.Tests
   - pwsh: |
+      mkdir /opt/devkitpro
       Invoke-WebRequest -Uri $env:DOWNLOAD_URI -OutFile devkitpro.zip
-      Expand-Archive -Path devkitpro.zip -DestinationPath /opt
+      Expand-Archive -Path devkitpro.zip -DestinationPath /opt/devkitpro
     displayName: Bootstrap devkitARM
     env:
       DOWNLOAD_URI: $(DevkitARMUri)
