--- a/azure-pipelines-merge.yml
+++ b/azure-pipelines-merge.yml
@@ -26,9 +26,9 @@ jobs:
       projects: $(Build.SourcesDirectory)/test/ui/SerialLoops.Mac.Tests/SerialLoops.Mac.Tests.csproj
     displayName: Build SerialLoops.Mac.Tests
   - pwsh: |
-      mkdir /devkitpro
+      mkdir $env:AGENT_BUILDDIRECTORY/devkitpro
       Invoke-WebRequest -Uri $env:DOWNLOAD_URI -OutFile devkitpro.zip
-      Expand-Archive -Path devkitpro.zip -DestinationPath /devkitpro
+      Expand-Archive -Path devkitpro.zip -DestinationPath $env:AGENT_BUILDDIRECTORY/devkitpro
     displayName: Bootstrap devkitARM
     env:
       DOWNLOAD_URI: $(DevkitARMUri)
@@ -47,7 +47,7 @@ jobs:
       PROJECT_NAME: MacUITest
       ROM_URI: $(ChokuRomUri)
       LOG_FILE: $(Build.ArtifactStagingDirectory)/TestConsole.log
-      DEVKITARM: /devkitpro/devkitARM
+      DEVKITARM: $(Agent.BuildDirectory)/devkitpro/devkitARM
   - task: PublishBuildArtifacts@1
     inputs:
       PathtoPublish: $(Build.ArtifactStagingDirectory)
