--- a/azure-pipelines-merge.yml
+++ b/azure-pipelines-merge.yml
@@ -52,9 +52,9 @@ jobs:
   - task: PublishBuildArtifacts@1
     inputs:
       PathtoPublish: $(Build.ArtifactStagingDirectory)
-      ArtifactName: WindowsTestArtifacts
+      ArtifactName: MacTestArtifacts
       publishLocation: Container
-    displayName: Publish Windows Test Artifacts
+    displayName: Publish macOS Test Artifacts
     condition: always()
   
 # - job:
