--- a/azure-pipelines-merge.yml
+++ b/azure-pipelines-merge.yml
@@ -36,7 +36,7 @@ jobs:
       export DEVKITARM=$AGENT_BUILDDIRECTORY/devkitpro/devkitARM
       npm i -g appium
       appium driver install mac2
-      nohup appium
+      nohup bash -c 'appium'
     displayName: Install and Run Appium Driver
   - task: DotNetCoreCLI@2
     displayName: Run macOS UI tests
