--- a/azure-pipelines-merge.yml
+++ b/azure-pipelines-merge.yml
@@ -55,57 +55,57 @@ jobs:
       publishLocation: Container
     displayName: Publish macOS Test Artifacts
     condition: always()
-# - job:
-#   displayName: UI Tests (Windows)
-#   pool:
-#     name: LoopyPool
-#     demands:
-#       - Agent.OS -equals Windows_NT
-#   steps:
-#   - checkout: self
-#     clean: true
-#   - pwsh: |
-#       Remove-Item -Path $env:USERPROFILE\SerialLoops\Logs\SerialLoops.log
-#     displayName: Delete SL logs if they exist
-#     continueOnError: true
-#   - task: DotNetCoreCLI@2
-#     inputs:
-#       command: 'build'
-#       projects: $(Build.SourcesDirectory)/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
-#     displayName: Build SerialLoops.Wpf
-#   - task: DotNetCoreCLI@2
-#     inputs:
-#       command: 'build'
-#       projects: $(Build.SourcesDirectory)/test/ui/SerialLoops.Wpf.Tests/SerialLoops.Wpf.Tests.csproj
-#     displayName: Build SerialLoops.Wpf.Tests
-#   - task: Docker@2
-#     displayName: Pull devkitpro/devkitarm in advance
-#     inputs:
-#       command: pull
-#       arguments: devkitpro/devkitarm
-#   - task: ms-autotest.screen-resolution-utility-task.screen-resolution-utlity-task.ScreenResolutionUtility@1
-#     displayName: 'Set Screen Resolution'
-#     inputs:
-#       displaySettings: specific
-#       width: 2048
-#       height: 1536
-#   - task: VSTest@3
-#     displayName: 'VsTest - Run UI Tests'
-#     inputs:
-#       testAssemblyVer2: |
-#         **\*SerialLoops.Wpf.Tests.dll
-#         !**\obj\**
-#       uiTests: true
-#     env:
-#       APP_LOCATION: $(Build.SourcesDirectory)\src\SerialLoops.Wpf\bin\Debug\net8.0-windows\SerialLoops.exe
-#       PROJECT_NAME: WinUITest
-#       WINAPPDRIVER_LOC: 'C:\Program Files (x86)\Windows Application Driver\WinAppDriver.exe'
-#       ROM_URI: $(ChokuRomUri)
-#       LOG_FILE: $(Build.ArtifactStagingDirectory)/TestConsole.log
-#   - task: PublishBuildArtifacts@1
-#     inputs:
-#       PathtoPublish: $(Build.ArtifactStagingDirectory)
-#       ArtifactName: WindowsTestArtifacts
-#       publishLocation: Container
-#     displayName: Publish Windows Test Artifacts
-#     condition: always()
+- job:
+  displayName: UI Tests (Windows)
+  pool:
+    name: LoopyPool
+    demands:
+      - Agent.OS -equals Windows_NT
+  steps:
+  - checkout: self
+    clean: true
+  - pwsh: |
+      Remove-Item -Path $env:USERPROFILE\SerialLoops\Logs\SerialLoops.log
+    displayName: Delete SL logs if they exist
+    continueOnError: true
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'build'
+      projects: $(Build.SourcesDirectory)/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
+    displayName: Build SerialLoops.Wpf
+  - task: DotNetCoreCLI@2
+    inputs:
+      command: 'build'
+      projects: $(Build.SourcesDirectory)/test/ui/SerialLoops.Wpf.Tests/SerialLoops.Wpf.Tests.csproj
+    displayName: Build SerialLoops.Wpf.Tests
+  - task: Docker@2
+    displayName: Pull devkitpro/devkitarm in advance
+    inputs:
+      command: pull
+      arguments: devkitpro/devkitarm
+  - task: ms-autotest.screen-resolution-utility-task.screen-resolution-utlity-task.ScreenResolutionUtility@1
+    displayName: 'Set Screen Resolution'
+    inputs:
+      displaySettings: specific
+      width: 2048
+      height: 1536
+  - task: VSTest@3
+    displayName: 'VsTest - Run UI Tests'
+    inputs:
+      testAssemblyVer2: |
+        **\*SerialLoops.Wpf.Tests.dll
+        !**\obj\**
+      uiTests: true
+    env:
+      APP_LOCATION: $(Build.SourcesDirectory)\src\SerialLoops.Wpf\bin\Debug\net8.0-windows\SerialLoops.exe
+      PROJECT_NAME: WinUITest
+      WINAPPDRIVER_LOC: 'C:\Program Files (x86)\Windows Application Driver\WinAppDriver.exe'
+      ROM_URI: $(ChokuRomUri)
+      LOG_FILE: $(Build.ArtifactStagingDirectory)/TestConsole.log
+  - task: PublishBuildArtifacts@1
+    inputs:
+      PathtoPublish: $(Build.ArtifactStagingDirectory)
+      ArtifactName: WindowsTestArtifacts
+      publishLocation: Container
+    displayName: Publish Windows Test Artifacts
+    condition: always()
