--- a/test/ui/SerialLoops.Wpf.Tests/SerialLoops.Wpf.Tests.csproj
+++ b/test/ui/SerialLoops.Wpf.Tests/SerialLoops.Wpf.Tests.csproj
@@ -20,6 +20,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="SimpleImageComparisonClassLibrary" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
