Install images plugin (fr)

--- a/azure-pipelines-merge.yml
+++ b/azure-pipelines-merge.yml
@@ -36,6 +36,7 @@ jobs:
       export DEVKITARM=$AGENT_BUILDDIRECTORY/devkitpro/devkitARM
       npm i -g appium
       appium driver install mac2
+      appium plugin install images
       brew update
       brew install opencv@3
       brew link --force opencv@3
