--- a/test/ui/SerialLoops.Mac.Tests/SerialLoops.Mac.Tests.csproj
+++ b/test/ui/SerialLoops.Mac.Tests/SerialLoops.Mac.Tests.csproj
@@ -19,6 +19,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="OpenTK.OpenAL" Version="5.0.0-pre.8" />
   </ItemGroup>
 
   <ItemGroup>
