--- a/NuGet.config
+++ b/NuGet.config
@@ -3,5 +3,6 @@
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="haroohie" value="https://pkgs.dev.azure.com/jonko0493/haroohie-public/_packaging/haroohie/nuget/v3/index.json" />
+    <add key="myget-eto" value="https://www.myget.org/F/eto/api/v3/index.json" />
   </packageSources>
 </configuration>
