--- a/src/SerialLoops.Gtk/SerialLoops.Gtk.csproj
+++ b/src/SerialLoops.Gtk/SerialLoops.Gtk.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eto.Platform.Gtk" Version="2.7.5" />
+    <PackageReference Include="Eto.Platform.Gtk" Version="2.7.2-ci-20240118.7563443893" />
     <PackageReference Include="OpenTK" Version="4.7.5" />
   </ItemGroup>
 	
