--- a/src/SerialLoops.Mac/SerialLoops.Mac.csproj
+++ b/src/SerialLoops.Mac/SerialLoops.Mac.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 	
   <ItemGroup>
-    <PackageReference Include="Eto.Platform.Mac64" Version="2.7.5" />
+    <PackageReference Include="Eto.Platform.Mac64" Version="2.7.2-ci-20240118.7563443893" />
     <PackageReference Include="OpenTK" Version="4.7.5" />
   </ItemGroup>
 	
