--- a/src/SerialLoops.Mac/SerialLoops.Mac.csproj
+++ b/src/SerialLoops.Mac/SerialLoops.Mac.csproj
@@ -20,7 +20,8 @@
   </ItemGroup>
 	
   <ItemGroup>
-    <PackageReference Include="Eto.Platform.Mac64" Version="2.7.2-ci-20240118.7563443893" />
+    <PackageReference Include="Eto.Forms.Controls.SkiaSharp.Mac" Version="2.0.0" />
+    <PackageReference Include="Eto.Platform.Mac64" Version="2.8.3" />
     <PackageReference Include="OpenTK" Version="4.8.2" />
   </ItemGroup>
 	
