--- a/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
+++ b/src/SerialLoops.Wpf/SerialLoops.Wpf.csproj
@@ -23,7 +23,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eto.Platform.Wpf" Version="2.7.2-ci-20240118.7563443893" />
+    <PackageReference Include="Eto.Forms.Controls.SkiaSharp.WPF" Version="2.0.0" />
+    <PackageReference Include="Eto.Platform.Wpf" Version="2.8.3" />
     <PackageReference Include="NAudio" Version="2.2.1" />
   </ItemGroup>
 
