--- a/src/SerialLoops.Gtk/SerialLoops.Gtk.csproj
+++ b/src/SerialLoops.Gtk/SerialLoops.Gtk.csproj
@@ -14,7 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eto.Platform.Gtk" Version="2.7.2-ci-20240118.7563443893" />
+    <PackageReference Include="Eto.Forms.Controls.SkiaSharp.GTK" Version="2.0.1" />
+    <PackageReference Include="Eto.Platform.Gtk" Version="2.8.3" />
     <PackageReference Include="OpenTK" Version="4.8.2" />
   </ItemGroup>
 	
