--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -10,6 +10,20 @@
     <InformationalVersion>$(SLVersion)</InformationalVersion>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <CFBundleName>SerialLoops</CFBundleName>
+    <!-- Also defines .app file name -->
+    <CFBundleDisplayName>Serial Loops</CFBundleDisplayName>
+    <CFBundleIdentifier>club.haroohie.SerialLoops</CFBundleIdentifier>
+    <CFBundleVersion>$(SLVersion)</CFBundleVersion>
+    <CFBundlePackageType>APPL</CFBundlePackageType>
+    <CFBundleExecutable>SerialLoops</CFBundleExecutable>
+    <CFBundleIconFile>SerialLoops.icns</CFBundleIconFile>
+    <!-- Will be copied from output directory -->
+    <NSPrincipalClass>NSApplication</NSPrincipalClass>
+    <NSHighResolutionCapable>true</NSHighResolutionCapable>
+  </PropertyGroup>
+
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
@@ -97,7 +111,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Assets\MacIcon.icns" />
     <None Remove="Assets\serial-loops.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="SerialLoops.icns" />
   </ItemGroup>
 
   <ItemGroup>
@@ -183,6 +202,7 @@
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.1" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="DialogHost.Avalonia" Version="0.7.9" />
+    <PackageReference Include="Dotnet.Bundle" Version="0.9.13" />
     <PackageReference Include="MessageBox.Avalonia" Version="3.1.5.1" />
   </ItemGroup>
 
@@ -203,6 +223,9 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
       <DependentUpon>Strings.resx</DependentUpon>
+    </Compile>
+    <Compile Update="Program.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
   </ItemGroup>
 
