--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -30,10 +30,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AvaloniaResource Remove="Assets\Graphics\BlankNameplate.png" />
-    <AvaloniaResource Remove="Assets\Graphics\BlankNameplateBaseArrow.png" />
-    <AvaloniaResource Remove="Assets\Graphics\MS-Gothic-Haruhi.ttf" />
-    <AvaloniaResource Remove="Assets\Graphics\ScriptPreviewError.png" />
     <AvaloniaResource Remove="Assets\Strings.de.resx" />
     <AvaloniaResource Remove="Assets\Strings.en-GB.resx" />
     <AvaloniaResource Remove="Assets\Strings.es.resx" />
@@ -51,23 +47,23 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Assets\Graphics\BlankNameplate.png" />
-    <EmbeddedResource Include="Assets\Graphics\BlankNameplateBaseArrow.png" />
-    <EmbeddedResource Include="Assets\Graphics\MS-Gothic-Haruhi.ttf" />
-    <EmbeddedResource Include="Assets\Graphics\ScriptPreviewError.png" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.1.1" />
+    <PackageReference Include="Avalonia.Controls.TreeDataGrid" Version="11.0.10" />
     <PackageReference Include="Avalonia.Desktop" Version="11.1.1" />
+    <PackageReference Include="Avalonia.Labs.Controls" Version="11.0.10.1" />
+    <PackageReference Include="Avalonia.Labs.Panels" Version="11.0.10.1" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="11.1.1" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.1.1" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.1.1" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.1" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+    <PackageReference Include="DialogHost.Avalonia" Version="0.7.9" />
     <PackageReference Include="Dotnet.Bundle" Version="0.9.13" />
+    <PackageReference Include="Markdown.Avalonia" Version="11.0.2" />
     <PackageReference Include="MessageBox.Avalonia" Version="3.1.5.1" />
+    <PackageReference Include="MiniToolbar.Avalonia" Version="1.0.26" />
+    <PackageReference Include="Tabalonia" Version="0.10.3" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
@@ -98,10 +94,6 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
