Add the beginning of the editors (Background Editor)

--- a/src/SerialLoops.Lib/SerialLoops.Lib.csproj
+++ b/src/SerialLoops.Lib/SerialLoops.Lib.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="BunLabs.NAudio.Flac" Version="2.0.1" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
     <PackageReference Include="HarfBuzzSharp.NativeAssets.Linux" Version="7.3.0.2" />
     <PackageReference Include="HarfBuzzSharp.NativeAssets.macOS" Version="7.3.0.2" />
     <PackageReference Include="HaruhiChokuretsuLib" Version="0.40.6" />
