--- a/src/SerialLoops/SerialLoops.csproj
+++ b/src/SerialLoops/SerialLoops.csproj
@@ -27,7 +27,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <InternalsVisibleTo Include="SerialLoops.Tests.Headless"/>
+    <InternalsVisibleTo Include="SerialLoops.Tests.Headless" />
   </ItemGroup>
 
   <ItemGroup>
@@ -69,10 +69,10 @@
     <PackageReference Include="DialogHost.Avalonia" Version="0.7.9" />
     <PackageReference Include="Dotnet.Bundle" Version="0.9.13" />
     <PackageReference Include="Markdown.Avalonia" Version="11.0.2" />
-    <PackageReference Include="MessageBox.Avalonia" Version="3.1.5.1" />
+    <PackageReference Include="MessageBox.Avalonia" Version="3.1.6" />
     <PackageReference Include="MiniToolbar.Avalonia" Version="1.0.26" />
     <PackageReference Include="SixLabors.Fonts" Version="2.0.4" />
-    <PackageReference Include="Tabalonia" Version="0.10.3" />
+    <PackageReference Include="Tabalonia" Version="0.10.3.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net8.0-windows'">
@@ -102,8 +102,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Assets\Strings.id.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <PublicClass>true</PublicClass>
+    </EmbeddedResource>
     <EmbeddedResource Update="Assets\Strings.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
+      <Generator>ResXFileCodeGenerator</Generator>
+      <PublicClass>true</PublicClass>
+      <StronglyTypedFileName>Assets\Strings.Designer.cs</StronglyTypedFileName>
+      <StronglyTypedLanguage>CSharp</StronglyTypedLanguage>
+      <StronglyTypedNamespace>SerialLoops.Assets</StronglyTypedNamespace>
+      <StronglyTypedClassName>Strings</StronglyTypedClassName>
       <LastGenOutput>Strings.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
