--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,10 @@ trigger:
 - none
 pr:
 - main
+- Avalonia
+
+variables:
+  - group: SerialLoopsPublic
 
 jobs:
 - job:
@@ -9,29 +13,36 @@ jobs:
     matrix:
       Linux:
         imageName: 'ubuntu-latest'
-        platformName: 'Gtk'
+        targetFramework: 'net8.0'
       macOS:
         imageName: 'macOS-latest'
-        platformName: 'Mac'
+        targetFramework: 'net8.0'
       Windows:
         imageName: 'windows-latest'
-        platformName: 'Wpf'
+        targetFramework: 'net8.0-windows'
   displayName: Build & Test
   pool:
     vmImage: $(imageName)
   steps:
   - checkout: self
     clean: true
+
+  - script: apt install -y libopenal1
+    condition: eq(variables.imageName, 'ubuntu-latest')
     
   - task: DotNetCoreCLI@2
     inputs:
       command: 'build'
-      projects: $(Build.SourcesDirectory)/src/SerialLoops.$(platformName)/SerialLoops.$(platformName).csproj
+      projects: $(Build.SourcesDirectory)/src/SerialLoops/SerialLoops.csproj
+      arguments: -f $(targetFramework)
     displayName: Build project
 
   - task: DotNetCoreCLI@2
     inputs:
       command: 'test'
-      projects: $(Build.SourcesDirectory)/test/SerialLoops.Tests/SerialLoops.Tests.csproj
+      projects: $(Build.SourcesDirectory)/test/SerialLoops.Tests.Headless/SerialLoops.Tests.Headless.csproj
+      arguments: -f $(targetFramework)
       publishTestResults: true
+    env:
+      ROM_URI: $(ChokuRomUri)
     displayName: Run tests
