try again try again try again

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ jobs:
   displayName: Build & Test
   pool:
     vmImage: $(imageName)
-  ${{ if ne('variables["containerImage"]', '') }}:
+  ${{ if ne(variables['containerImage'], '') }}:
     container: $(containerImage)
   steps:
   - checkout: self
