Add preferences dialog test

--- a/test/SerialLoops.Tests.Shared/SerialLoops.Tests.Shared.csproj
+++ b/test/SerialLoops.Tests.Shared/SerialLoops.Tests.Shared.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HaruhiChokuretsuLib" Version="0.40.6" />
+    <PackageReference Include="NUnit" Version="4.1.0" />
+  </ItemGroup>
+
 </Project>
