Expand on the BG tests

--- a/test/SerialLoops.Tests.Shared/SerialLoops.Tests.Shared.csproj
+++ b/test/SerialLoops.Tests.Shared/SerialLoops.Tests.Shared.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="NUnit" Version="4.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\SerialLoops.Lib\SerialLoops.Lib.csproj" />
+  </ItemGroup>
+
 </Project>
